--- a/EasyPOS/App.config
+++ b/EasyPOS/App.config
@@ -12,6 +12,9 @@
         <add name="EasyPOS.Properties.Settings.easyposConnectionString1"
             connectionString="Data Source=localhost;Initial Catalog=easypos;User ID=sa;Password=easyfis"
             providerName="System.Data.SqlClient" />
+        <add name="EasyPOS.Properties.Settings.easypos_julypharmacyConnectionString"
+            connectionString="Data Source=localhost;Initial Catalog=easypos_julypharmacy;Persist Security Info=True;User ID=sa"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
