--- a/EasyPOS/EasyPOS.csproj
+++ b/EasyPOS/EasyPOS.csproj
@@ -853,6 +853,12 @@
     <Compile Include="Forms\Software\TrnPOS\TrnPOSReturnReportForm.Designer.cs">
       <DependentUpon>TrnPOSReturnReportForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Software\TrnPOS\TrnPOSTenderLoadInformation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\TrnPOS\TrnPOSTenderLoadInformation.Designer.cs">
+      <DependentUpon>TrnPOSTenderLoadInformation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Software\TrnPOS\TrnPOSTenderGiftCertificateInformation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1510,6 +1516,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnPOS\TrnPOSReturnReportForm.resx">
       <DependentUpon>TrnPOSReturnReportForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\TrnPOS\TrnPOSTenderLoadInformation.resx">
+      <DependentUpon>TrnPOSTenderLoadInformation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnPOS\TrnPOSTenderGiftCertificateInformation.resx">
       <DependentUpon>TrnPOSTenderGiftCertificateInformation.cs</DependentUpon>
