--- a/EasyPOS/EasyPOS.csproj
+++ b/EasyPOS/EasyPOS.csproj
@@ -841,6 +841,12 @@
     <Compile Include="Forms\Software\TrnPOS\TrnPOSBillOutForm.Designer.cs">
       <DependentUpon>TrnPOSBillOutForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Software\TrnPOS\TrnPOSSalesOrderReportFormLabelPrinter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\TrnPOS\TrnPOSSalesOrderReportFormLabelPrinter.Designer.cs">
+      <DependentUpon>TrnPOSSalesOrderReportFormLabelPrinter.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Software\TrnPOS\TrnPOSSalesOrderReportForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1510,6 +1516,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnPOS\TrnPOSBillOutForm.resx">
       <DependentUpon>TrnPOSBillOutForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\TrnPOS\TrnPOSSalesOrderReportFormLabelPrinter.resx">
+      <DependentUpon>TrnPOSSalesOrderReportFormLabelPrinter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnPOS\TrnPOSSalesOrderReportForm.resx">
       <DependentUpon>TrnPOSSalesOrderReportForm.cs</DependentUpon>
