--- a/EasyPOS/App.config
+++ b/EasyPOS/App.config
@@ -15,6 +15,8 @@
         <add name="EasyPOS.Properties.Settings.easypos_julypharmacyConnectionString"
             connectionString="Data Source=localhost;Initial Catalog=easypos_julypharmacy;Persist Security Info=True;User ID=sa"
             providerName="System.Data.SqlClient" />
+        <add name="EasyPOS.Properties.Settings.ConnectionString" connectionString="Dsn=easypos;uid=sa;pwd=easyfis"
+            providerName="System.Data.Odbc" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
