--- a/EasyPOS/EasyPOS.csproj
+++ b/EasyPOS/EasyPOS.csproj
@@ -243,6 +243,7 @@
     <Compile Include="Controllers\RepSalesReportController.cs" />
     <Compile Include="Controllers\SysAuditTrailController.cs" />
     <Compile Include="Controllers\SysKitchenController.cs" />
+    <Compile Include="Controllers\SysKitchenPrinterController.cs" />
     <Compile Include="Controllers\SysLoginController.cs" />
     <Compile Include="Controllers\IntCloudSettingsController.cs" />
     <Compile Include="Controllers\SysCurrentController.cs" />
@@ -314,6 +315,7 @@
     <Compile Include="Entities\DgvMstItemComponentListEntity.cs" />
     <Compile Include="Entities\DgvSalesSummaryRewardReportEntity.cs" />
     <Compile Include="Entities\DgvSysDispatchStationSalesListEntity.cs" />
+    <Compile Include="Entities\DgvSysKitchenPrinterEntity.cs" />
     <Compile Include="Entities\DgvSysUtilitiesItemUpload.cs" />
     <Compile Include="Entities\DgvTrnCollectionLineListEntity.cs" />
     <Compile Include="Entities\DgvTrnCollectionListEntity.cs" />
@@ -412,6 +414,7 @@
     <Compile Include="Entities\SysCurrentEntity.cs" />
     <Compile Include="Entities\SysFormEntity.cs" />
     <Compile Include="Entities\SysKitchenItemEntity.cs" />
+    <Compile Include="Entities\SysKitchenPrinterEntity.cs" />
     <Compile Include="Entities\SysUserRightsEntity.cs" />
     <Compile Include="Entities\TrnCollectionEntity.cs" />
     <Compile Include="Entities\TrnCollectionLineEntity.cs" />
@@ -678,6 +681,12 @@
     </Compile>
     <Compile Include="Forms\Software\RepSalesReport\RepSalesDetailReportPDFForm.Designer.cs">
       <DependentUpon>RepSalesDetailReportPDFForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Software\RepSalesReport\Rep80mmSalesSummaryReportPDFForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\RepSalesReport\Rep80mmSalesSummaryReportPDFForm.Designer.cs">
+      <DependentUpon>Rep80mmSalesSummaryReportPDFForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Software\RepSalesReport\RepSalesSummaryReportPDFForm.cs">
       <SubType>Form</SubType>
@@ -1441,6 +1450,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\RepSalesReport\RepSalesDetailReportPDFForm.resx">
       <DependentUpon>RepSalesDetailReportPDFForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\RepSalesReport\Rep80mmSalesSummaryReportPDFForm.resx">
+      <DependentUpon>Rep80mmSalesSummaryReportPDFForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\RepSalesReport\RepSalesSummaryReportPDFForm.resx">
       <DependentUpon>RepSalesSummaryReportPDFForm.cs</DependentUpon>
