--- a/EasyPOS/EasyPOS.csproj
+++ b/EasyPOS/EasyPOS.csproj
@@ -850,6 +850,12 @@
     <Compile Include="Forms\Software\TrnPOS\TrnPOSBillOutForm.Designer.cs">
       <DependentUpon>TrnPOSBillOutForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Software\TrnPOS\TrnPOSSalesInvoicePDFReportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\TrnPOS\TrnPOSSalesInvoicePDFReportForm.Designer.cs">
+      <DependentUpon>TrnPOSSalesInvoicePDFReportForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Software\TrnPOS\TrnPOSSalesInvoiceReportForm.cs">
       <SubType>Form</SubType>
     </Compile>
