--- a/EasyPOS/EasyPOS.csproj
+++ b/EasyPOS/EasyPOS.csproj
@@ -672,6 +672,12 @@
     <Compile Include="Forms\Software\RepRemittanceReport\RepCashInOutSummaryReportForm.Designer.cs">
       <DependentUpon>RepCashInOutSummaryReportForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Software\RepSalesReport\Rep80mmCollectionDetailReportPDFForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\RepSalesReport\Rep80mmCollectionDetailReportPDFForm.Designer.cs">
+      <DependentUpon>Rep80mmCollectionDetailReportPDFForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Software\RepSalesReport\RepCollectionDetailReportPDFForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1458,6 +1464,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\RepRemittanceReport\RepCashInOutSummaryReportForm.resx">
       <DependentUpon>RepCashInOutSummaryReportForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\RepSalesReport\Rep80mmCollectionDetailReportPDFForm.resx">
+      <DependentUpon>Rep80mmCollectionDetailReportPDFForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\RepSalesReport\RepCollectionDetailReportPDFForm.resx">
       <DependentUpon>RepCollectionDetailReportPDFForm.cs</DependentUpon>
