--- a/EasyPOS/EasyPOS.csproj
+++ b/EasyPOS/EasyPOS.csproj
@@ -678,6 +678,12 @@
     <Compile Include="Forms\Software\RepSalesReport\Rep80mmCollectionDetailReportPDFForm.Designer.cs">
       <DependentUpon>Rep80mmCollectionDetailReportPDFForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Software\RepSalesReport\Rep80mmSalesDetailReportPDFForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\RepSalesReport\Rep80mmSalesDetailReportPDFForm.Designer.cs">
+      <DependentUpon>Rep80mmSalesDetailReportPDFForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Software\RepSalesReport\RepCollectionDetailReportPDFForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1467,6 +1473,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\RepSalesReport\Rep80mmCollectionDetailReportPDFForm.resx">
       <DependentUpon>Rep80mmCollectionDetailReportPDFForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\RepSalesReport\Rep80mmSalesDetailReportPDFForm.resx">
+      <DependentUpon>Rep80mmSalesDetailReportPDFForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\RepSalesReport\RepCollectionDetailReportPDFForm.resx">
       <DependentUpon>RepCollectionDetailReportPDFForm.cs</DependentUpon>
