Kitchen Printing Done

--- a/EasyPOS/App.config
+++ b/EasyPOS/App.config
@@ -17,6 +17,9 @@
             providerName="System.Data.SqlClient" />
         <add name="EasyPOS.Properties.Settings.ConnectionString" connectionString="Dsn=easypos;uid=sa;pwd=easyfis"
             providerName="System.Data.Odbc" />
+        <add name="EasyPOS.Properties.Settings.easypos_julypharmacy_cabrerosConnectionString"
+            connectionString="Data Source=localhost;Initial Catalog=easypos_julypharmacy_cabreros;Persist Security Info=True;User ID=sa"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
