--- a/EasyPOS/EasyPOS.csproj
+++ b/EasyPOS/EasyPOS.csproj
@@ -893,6 +893,12 @@
     <Compile Include="Forms\Software\TrnPOS\TrnPOSSalesInvoiceReportForm.Designer.cs">
       <DependentUpon>TrnPOSSalesInvoiceReportForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Software\TrnPOS\TrnPOSTouchOrderReportFormKitchenPrinter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\TrnPOS\TrnPOSTouchOrderReportFormKitchenPrinter.Designer.cs">
+      <DependentUpon>TrnPOSTouchOrderReportFormKitchenPrinter.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Software\TrnPOS\TrnPOSSalesOrderReportFormLabelPrinter.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1589,6 +1595,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnPOS\TrnPOSSalesInvoiceReportForm.resx">
       <DependentUpon>TrnPOSSalesInvoiceReportForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\TrnPOS\TrnPOSTouchOrderReportFormKitchenPrinter.resx">
+      <DependentUpon>TrnPOSTouchOrderReportFormKitchenPrinter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnPOS\TrnPOSSalesOrderReportFormLabelPrinter.resx">
       <DependentUpon>TrnPOSSalesOrderReportFormLabelPrinter.cs</DependentUpon>
