--- a/EasyPOS/App.config
+++ b/EasyPOS/App.config
@@ -20,6 +20,9 @@
         <add name="EasyPOS.Properties.Settings.easypos_julypharmacy_cabrerosConnectionString"
             connectionString="Data Source=localhost;Initial Catalog=easypos_julypharmacy_cabreros;Persist Security Info=True;User ID=sa"
             providerName="System.Data.SqlClient" />
+        <add name="EasyPOS.Properties.Settings.easyposConnectionString2"
+            connectionString="Data Source=DESKTOP-5B9573O\SQLEXPRESS;Initial Catalog=easypos;Persist Security Info=True;User ID=sa"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
