Update For Purchaser's Issue on Z Reading Previous Accumulated Net Sales

--- a/EasyPOS/App.config
+++ b/EasyPOS/App.config
@@ -23,6 +23,9 @@
         <add name="EasyPOS.Properties.Settings.easyposConnectionString2"
             connectionString="Data Source=DESKTOP-5B9573O\SQLEXPRESS;Initial Catalog=easypos;Persist Security Info=True;User ID=sa"
             providerName="System.Data.SqlClient" />
+        <add name="EasyPOS.Properties.Settings.easypos_julyConnectionString"
+            connectionString="Data Source=DESKTOP-RT4V2EU\SQLEXPRESS;Initial Catalog=easypos_july;User ID=sa"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
