Recalculate Progress UI

--- a/EasyPOS/App.config
+++ b/EasyPOS/App.config
@@ -3,29 +3,14 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="EasyPOS.Properties.Settings.easyposConnectionString"
-            connectionString="Data Source=localhost;Initial Catalog=easypos;Persist Security Info=True;User ID=sa"
-            providerName="System.Data.SqlClient" />
-        <add name="EasyPOS.Properties.Settings.easypos_sonnetsConnectionString"
-            connectionString="Data Source=localhost;Initial Catalog=easypos_sonnets;Persist Security Info=True;User ID=sa"
-            providerName="System.Data.SqlClient" />
-        <add name="EasyPOS.Properties.Settings.easyposConnectionString1"
-            connectionString="Data Source=localhost;Initial Catalog=easypos;User ID=sa;Password=easyfis"
-            providerName="System.Data.SqlClient" />
-        <add name="EasyPOS.Properties.Settings.easypos_julypharmacyConnectionString"
-            connectionString="Data Source=localhost;Initial Catalog=easypos_julypharmacy;Persist Security Info=True;User ID=sa"
-            providerName="System.Data.SqlClient" />
-        <add name="EasyPOS.Properties.Settings.ConnectionString" connectionString="Dsn=easypos;uid=sa;pwd=easyfis"
-            providerName="System.Data.Odbc" />
-        <add name="EasyPOS.Properties.Settings.easypos_julypharmacy_cabrerosConnectionString"
-            connectionString="Data Source=localhost;Initial Catalog=easypos_julypharmacy_cabreros;Persist Security Info=True;User ID=sa"
-            providerName="System.Data.SqlClient" />
-        <add name="EasyPOS.Properties.Settings.easyposConnectionString2"
-            connectionString="Data Source=DESKTOP-5B9573O\SQLEXPRESS;Initial Catalog=easypos;Persist Security Info=True;User ID=sa"
-            providerName="System.Data.SqlClient" />
-        <add name="EasyPOS.Properties.Settings.easypos_julyConnectionString"
-            connectionString="Data Source=DESKTOP-RT4V2EU\SQLEXPRESS;Initial Catalog=easypos_july;User ID=sa"
-            providerName="System.Data.SqlClient" />
+        <add name="EasyPOS.Properties.Settings.easyposConnectionString" connectionString="Data Source=localhost;Initial Catalog=easypos;Persist Security Info=True;User ID=sa" providerName="System.Data.SqlClient" />
+        <add name="EasyPOS.Properties.Settings.easypos_sonnetsConnectionString" connectionString="Data Source=localhost;Initial Catalog=easypos_sonnets;Persist Security Info=True;User ID=sa" providerName="System.Data.SqlClient" />
+        <add name="EasyPOS.Properties.Settings.easyposConnectionString1" connectionString="Data Source=localhost;Initial Catalog=easypos;User ID=sa;Password=easyfis" providerName="System.Data.SqlClient" />
+        <add name="EasyPOS.Properties.Settings.easypos_julypharmacyConnectionString" connectionString="Data Source=localhost;Initial Catalog=easypos_julypharmacy;Persist Security Info=True;User ID=sa" providerName="System.Data.SqlClient" />
+        <add name="EasyPOS.Properties.Settings.ConnectionString" connectionString="Dsn=easypos;uid=sa;pwd=easyfis" providerName="System.Data.Odbc" />
+        <add name="EasyPOS.Properties.Settings.easypos_julypharmacy_cabrerosConnectionString" connectionString="Data Source=localhost;Initial Catalog=easypos_julypharmacy_cabreros;Persist Security Info=True;User ID=sa" providerName="System.Data.SqlClient" />
+        <add name="EasyPOS.Properties.Settings.easyposConnectionString2" connectionString="Data Source=DESKTOP-5B9573O\SQLEXPRESS;Initial Catalog=easypos;Persist Security Info=True;User ID=sa" providerName="System.Data.SqlClient" />
+        <add name="EasyPOS.Properties.Settings.easypos_julyConnectionString" connectionString="Data Source=DESKTOP-RT4V2EU\SQLEXPRESS;Initial Catalog=easypos_july;User ID=sa" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
