POS Retail: Bodega Transaction Option

--- a/EasyPOS/App.config
+++ b/EasyPOS/App.config
@@ -26,6 +26,9 @@
         <add name="EasyPOS.Properties.Settings.easypos_julyConnectionString"
             connectionString="Data Source=DESKTOP-RT4V2EU\SQLEXPRESS;Initial Catalog=easypos_july;User ID=sa"
             providerName="System.Data.SqlClient" />
+        <add name="EasyPOS.Properties.Settings.easyposConnectionString3"
+            connectionString="Data Source=(local);Initial Catalog=easypos;Persist Security Info=True;User ID=sa"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
