--- a/EasyPOS/EasyPOS.csproj
+++ b/EasyPOS/EasyPOS.csproj
@@ -958,6 +958,12 @@
     <Compile Include="Forms\Software\TrnPOS\TrnPOSSalesInvoiceReportForm.Designer.cs">
       <DependentUpon>TrnPOSSalesInvoiceReportForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Software\TrnPOS\TrnPOSSalesOrderBodegaReportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\TrnPOS\TrnPOSSalesOrderBodegaReportForm.Designer.cs">
+      <DependentUpon>TrnPOSSalesOrderBodegaReportForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Software\TrnPOS\TrnPOSTouchOrderReportFormKitchenPrinter.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1708,6 +1714,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnPOS\TrnPOSSalesInvoiceReportForm.resx">
       <DependentUpon>TrnPOSSalesInvoiceReportForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\TrnPOS\TrnPOSSalesOrderBodegaReportForm.resx">
+      <DependentUpon>TrnPOSSalesOrderBodegaReportForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnPOS\TrnPOSTouchOrderReportFormKitchenPrinter.resx">
       <DependentUpon>TrnPOSTouchOrderReportFormKitchenPrinter.cs</DependentUpon>
